[package]
name = "btg-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"]}
anyhow = "1.0.57"
oauth2 = "4.2.0"
webbrowser = "0.7.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.7", features = ["http2", "server", "runtime"] }
log = "0.4.17"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
chrono = "0.4.19"
keyring = "1.1.2"